@@ -1,3 +1,8 @@
+2009-04-08  Abel Cheung  <abelcheung@gmail.com>
+
+	* scorerender-admin.php:
+	- Cosmetic word changes.
+
 2009-04-05  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php, scorerender-admin.php:
